--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Keshav Dogra
-description: Economic Research Advisor, New York Fed
+description: Economic Research Advisor, NY Fed
 show_downloads: false
